Updated Experiment code and removed deprecated calls